--- a/notebooks/demo_Hangul.ipynb
+++ b/notebooks/demo_Hangul.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"data/nine_dreams/ninedreams.txt\" is required"
+    "# \"data/nine_dreams/ninedreams.txt\" IS REQUIRED"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SPECIFY FILE ENCODING TYOE IN PYTHON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,12 +25,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Load packs\n"
+      "UTF-8 ENCODING\n"
      ]
     }
    ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
+    "print (\"UTF-8 ENCODING\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LOAD PACKAGES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PACKAGES LOADED\n"
+     ]
+    }
+   ],
+   "source": [
     "import chardet # https://github.com/chardet/chardet\n",
     "import glob\n",
     "import codecs\n",
@@ -31,19 +64,19 @@
     "import os\n",
     "from TextLoader import *\n",
     "from Hangulpy3 import *\n",
-    "print (\"Load packs\")"
+    "print (\"PACKAGES LOADED\") "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First, convert txt to UTF8 encoded file"
+    "# CONVERT UTF8-ENCODED TXT FILE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -64,19 +97,19 @@
     "    with codecs.open(fromfile, \"r\", encoding=pred['encoding'], errors=\"ignore\") as f:\n",
     "        with codecs.open(tofile, \"w+\", encoding=\"utf8\") as t:\n",
     "            all_text = f.read()\n",
-    "            t.write(all_text)\n"
+    "            t.write(all_text)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"data/nine_dreams/ninedreams_utf8.txt\" will be generated"
+    "# \"data/nine_dreams/ninedreams_utf8.txt\" IS GENERATED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -85,44 +118,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UTF8 Convert done\n"
+      "UTF8-CONVERTING DONE\n",
+      " [data/nine_dreams/ninedreams_utf8.txt] IS GENERATED\n"
      ]
     }
    ],
    "source": [
+    "# SOURCE TXT FILE\n",
     "fromfile = \"data/nine_dreams/ninedreams.txt\"\n",
-    "tofile = \"data/nine_dreams/ninedreams_utf8.txt\"\n",
+    "# TARGET TXT FILE\n",
+    "tofile   = \"data/nine_dreams/ninedreams_utf8.txt\"\n",
     "conv_file(fromfile, tofile)\n",
-    "print (\"UTF8 Convert done\")"
+    "print (\"UTF8-CONVERTING DONE\")\n",
+    "print (\" [%s] IS GENERATED\" % (tofile))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Then, parse txt file"
+    "# DECOMPOSE HANGUL (THIS PART IS IMPORTANT!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FUNCTION READY\n"
+     ]
+    }
+   ],
    "source": [
     "def dump_file(filename):\n",
-    "    result=u\"\"\n",
+    "    result=u\"\" # <= UNICODE STRING \n",
     "    with codecs.open(filename,\"r\", encoding=\"UTF8\") as f:\n",
     "        for line in f.readlines():\n",
     "            line = tuple(line)\n",
     "            result = result + decompose_text(line)\n",
-    "    return result"
+    "    return result\n",
+    "print (\"FUNCTION READY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PYTHON 2 AND 3 COMPATIBILITY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +196,9 @@
     "    parsed_txt = dump_file(tofile).encode(\"utf8\") \n",
     "else:\n",
     "    parsed_txt = dump_file(tofile) \n",
+    "\n",
     "print (\"Parsing %s done\" % (tofile))\n",
+    "# PRINT FIRST 100 CHARACTERS\n",
     "print (parsed_txt[:100])"
    ]
   },
@@ -151,12 +206,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"data/nine_dreams/input.txt\" will be generated"
+    "# \"data/nine_dreams/input.txt\" IS GENERATED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -165,26 +220,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved to a txt file\n"
+      "Saved to a txt file\n",
+      "<closed file 'data/nine_dreams/input.txt', mode 'w' at 0x7f62ae9a58a0>\n"
      ]
     }
    ],
    "source": [
     "with open(\"data/nine_dreams/input.txt\", \"w\") as text_file:\n",
     "    text_file.write(parsed_txt)\n",
-    "print (\"Saved to a txt file\")"
+    "print (\"Saved to a txt file\")\n",
+    "print (text_file)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deparse"
+    "# COMPOSE HANGUL CHARACTER FROM PHONEME "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -222,13 +279,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This makes \"vocab.pkl\" and \"data.npy\" in \"data/nine_dreams/\"   \n",
-    "#  from \"data/nine_dreams/input.txt\" "
+    "# GENERATE \"vocab.pkl\" and \"data.npy\" in \"data/nine_dreams/\" FROM \"data/nine_dreams/input.txt\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -249,8 +305,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DATA_LOADER IS:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -269,8 +332,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DATA_LOADER.VOCAB IS:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -289,8 +359,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DATA_LOADER.CHARS IS:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -309,8 +386,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CHARS CONVERTS INDEX -> CHAR"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -330,100 +414,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00:       (00) => \n",
-      "01:       (01) => \n",
-      "02:       (02) => \n",
-      "03:     ㅏ (03) => \n",
-      "04:       (04) => \n",
-      "05:       (05) => \n",
-      "06:     ㅣ (06) => \n",
-      "07:       (07) => \n",
-      "08:     ㅡ (08) => \n",
-      "09:     ㅗ (09) => \n",
-      "10:       (10) => \n",
-      "11:     ㅓ (11) => \n",
-      "12:       (12) => \n",
-      "13:       (13) => \n",
-      "14:       (14) => \n",
-      "15:       (15) => \n",
-      "16:     ㅜ (16) => \n",
-      "17:       (17) => \n",
-      "18:     ㅕ (18) => \n",
-      "19:     \n",
-      " (19) => \n",
-      "20:     ㅔ (20) => \n",
-      "21:     ㅐ (21) => \n",
-      "22:       (22) => \n",
-      "23:       (23) => \n",
-      "24:     . (24) => \n",
-      "25:     ㅢ (25) => \n",
-      "26:     ㅘ (26) => \n",
-      "27:     , (27) => \n",
-      "28:     \" (28) => \n",
-      "29:       (29) => \n",
-      "30:       (30) => \n",
-      "31:       (31) => \n",
-      "32:       (32) => \n",
-      "33:     ㅚ (33) => \n",
-      "34:     ㅑ (34) => \n",
-      "35:     ㅟ (35) => \n",
-      "36:     ㅝ (36) => \n",
-      "37:     ㅠ (37) => \n",
-      "38:     ㅛ (38) => \n",
-      "39:     ㅖ (39) => \n",
-      "40:       (40) => \n",
-      "41:     ? (41) => \n",
-      "42:       (42) => \n",
-      "43:     ㅄ (43) => \n",
-      "44:     ㄶ (44) => \n",
-      "45:     ( (45) => \n",
-      "46:     ) (46) => \n",
-      "47:       (47) => \n",
-      "48:     ㄺ (48) => \n",
-      "49:     ' (49) => \n",
-      "50:     ㄵ (50) => \n",
-      "51:     ㅀ (51) => \n",
-      "52:     ! (52) => \n",
-      "53:     ㅙ (53) => \n",
-      "54:     ㄼ (54) => \n",
-      "55:     ㄻ (55) => \n",
-      "56:     ㄿ (56) => \n",
-      "57:     : (57) => \n",
-      "58:     1 (58) => \n",
-      "59:     6 (59) => \n",
-      "60:     ㄳ (60) => \n",
-      "61:     ㅞ (61) => \n",
-      "62:     2 (62) => \n",
-      "63:     5 (63) => \n",
-      "64:     9 (64) => \n",
-      "65:     - (65) => \n",
-      "66:     3 (66) => \n",
-      "67:     4 (67) => \n",
-      "68:     8 (68) => \n",
-      "69:     _ (69) => \n",
-      "70:     ㄾ (70) => \n",
-      "71:     7 (71) => \n",
-      "72:     \u001a (72) => \n",
-      "73:     0 (73) => \n",
-      "74:     ㅒ (74) => \n",
-      "75:     > (75) => \n"
+      "[00]     (00)\n",
+      "[01]     (01)\n",
+      "[02]     (02)\n",
+      "[03]   ㅏ (03)\n",
+      "[04]     (04)\n",
+      "[05]     (05)\n",
+      "[06]   ㅣ (06)\n",
+      "[07]     (07)\n",
+      "[08]   ㅡ (08)\n",
+      "[09]   ㅗ (09)\n",
+      "[10]     (10)\n",
+      "[11]   ㅓ (11)\n",
+      "[12]     (12)\n",
+      "[13]     (13)\n",
+      "[14]     (14)\n",
+      "[15]     (15)\n",
+      "[16]   ㅜ (16)\n",
+      "[17]     (17)\n",
+      "[18]   ㅕ (18)\n",
+      "[19]   \n",
+      " (19)\n",
+      "[20]   ㅔ (20)\n",
+      "[21]   ㅐ (21)\n",
+      "[22]     (22)\n",
+      "[23]     (23)\n",
+      "[24]   . (24)\n",
+      "[25]   ㅢ (25)\n",
+      "[26]   ㅘ (26)\n",
+      "[27]   , (27)\n",
+      "[28]   \" (28)\n",
+      "[29]     (29)\n",
+      "[30]     (30)\n",
+      "[31]     (31)\n",
+      "[32]     (32)\n",
+      "[33]   ㅚ (33)\n",
+      "[34]   ㅑ (34)\n",
+      "[35]   ㅟ (35)\n",
+      "[36]   ㅝ (36)\n",
+      "[37]   ㅠ (37)\n",
+      "[38]   ㅛ (38)\n",
+      "[39]   ㅖ (39)\n",
+      "[40]     (40)\n",
+      "[41]   ? (41)\n",
+      "[42]     (42)\n",
+      "[43]   ㅄ (43)\n",
+      "[44]   ㄶ (44)\n",
+      "[45]   ( (45)\n",
+      "[46]   ) (46)\n",
+      "[47]     (47)\n",
+      "[48]   ㄺ (48)\n",
+      "[49]   ' (49)\n",
+      "[50]   ㄵ (50)\n",
+      "[51]   ㅀ (51)\n",
+      "[52]   ! (52)\n",
+      "[53]   ㅙ (53)\n",
+      "[54]   ㄼ (54)\n",
+      "[55]   ㄻ (55)\n",
+      "[56]   ㄿ (56)\n",
+      "[57]   : (57)\n",
+      "[58]   1 (58)\n",
+      "[59]   6 (59)\n",
+      "[60]   ㄳ (60)\n",
+      "[61]   ㅞ (61)\n",
+      "[62]   2 (62)\n",
+      "[63]   5 (63)\n",
+      "[64]   9 (64)\n",
+      "[65]   - (65)\n",
+      "[66]   3 (66)\n",
+      "[67]   4 (67)\n",
+      "[68]   8 (68)\n",
+      "[69]   _ (69)\n",
+      "[70]   ㄾ (70)\n",
+      "[71]   7 (71)\n",
+      "[72]   \u001a (72)\n",
+      "[73]   0 (73)\n",
+      "[74]   ㅒ (74)\n",
+      "[75]   > (75)\n"
      ]
     }
    ],
    "source": [
     "for i, char in enumerate(data_loader.chars):\n",
+    "    # GET INDEX OF THE CHARACTER\n",
     "    idx = data_loader.vocab[char]\n",
-    "    print (\"%02d: %05s (%02d) => \" \n",
+    "    print (\"[%02d] %03s (%02d)\" \n",
     "           % (i, automata(\"\".join(char)), idx))"
    ]
   },
