--- a/notebooks/mlp_mnist_simple.ipynb
+++ b/notebooks/mlp_mnist_simple.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MULTI-LAYER PERCEPTRON ON MNIST"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -11,22 +18,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Packs loaded.\n"
+      "PACKAGES LOADED\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    " Simple Multi-Layer Pecptron with MNIST\n",
-    " @Sungjoon Choi (sungjoon.choi@cpslab.snu.ac.kr)\n",
-    "\"\"\"\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
     "%matplotlib inline  \n",
-    "print (\"Packs loaded.\")"
+    "print (\"PACKAGES LOADED\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LOAD MNIST"
    ]
   },
   {
@@ -48,8 +58,14 @@
     }
    ],
    "source": [
-    "# MNIST\n",
     "mnist = input_data.read_data_sets('data/', one_hot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEFINE MODEL"
    ]
   },
   {
@@ -63,36 +79,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network Ready\n"
+      "NETWORK READY\n"
      ]
     }
    ],
    "source": [
-    "# Parameters\n",
+    "# PARAMETERS\n",
     "learning_rate   = 0.001\n",
     "training_epochs = 10\n",
     "batch_size      = 100\n",
     "display_step    = 1\n",
     "\n",
-    "# Network Parameters\n",
-    "n_hidden_1 = 256 # 1st layer num features\n",
-    "n_hidden_2 = 128 # 2nd layer num features\n",
-    "n_input    = 784 # MNIST data input (img shape: 28*28)\n",
-    "n_classes  = 10 # MNIST total classes (0-9 digits)\n",
+    "# NETWORK TOPOLOGIES\n",
+    "n_hidden_1 = 256 \n",
+    "n_hidden_2 = 128 \n",
+    "n_input    = 784 \n",
+    "n_classes  = 10  \n",
     "\n",
-    "# tf Graph input\n",
+    "# INPUTS AND OUTPUTS\n",
     "x = tf.placeholder(\"float\", [None, n_input])\n",
     "y = tf.placeholder(\"float\", [None, n_classes])\n",
     "\n",
-    "# Create model\n",
+    "# MLP MODEL\n",
     "def multilayer_perceptron(_X, _weights, _biases):\n",
     "    layer_1 = tf.nn.sigmoid(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1'])) \n",
     "    layer_2 = tf.nn.sigmoid(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2']))\n",
-    "    return (tf.sigmoid(tf.matmul(layer_2, _weights['out']) + _biases['out']))\n",
-    "    # return (tf.sigmoid(tf.matmul(layer_2, _weights['out']) + _biases['out']))\n",
+    "    return (tf.matmul(layer_2, _weights['out']) + _biases['out'])\n",
     "    \n",
-    "# Store layers weight & bias\n",
-    "stddev = 0.1 # <== This greatly affects accuracy!! \n",
+    "# NETWORK PARAMETERS\n",
+    "stddev = 0.1\n",
     "weights = {\n",
     "    'h1': tf.Variable(tf.random_normal([n_input, n_hidden_1], stddev=stddev)),\n",
     "    'h2': tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2], stddev=stddev)),\n",
@@ -103,33 +118,56 @@
     "    'b2': tf.Variable(tf.random_normal([n_hidden_2])),\n",
     "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
     "}\n",
-    "print (\"Network Ready\")"
+    "print (\"NETWORK READY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEFINE FUNCTIONS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FUNCTIONS READY\n"
+     ]
+    }
+   ],
    "source": [
-    "# Construct model\n",
+    "# PREDICTION\n",
     "pred = multilayer_perceptron(x, weights, biases)\n",
     "\n",
-    "# Define loss and optimizer\n",
+    "# LOSS AND OPTIMIZER\n",
     "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) # Softmax loss\n",
     "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
     "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
     "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
     "\n",
-    "# Initializing the variables\n",
-    "init = tf.initialize_all_variables()"
+    "# INITIALIZER\n",
+    "init = tf.initialize_all_variables()\n",
+    "print (\"FUNCTIONS READY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RUN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -139,65 +177,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/010 cost: 1.710917208\n",
-      "Training accuracy: 0.930\n",
-      "Test accuracy: 0.911\n",
-      "Epoch: 001/010 cost: 1.544890469\n",
-      "Training accuracy: 0.930\n",
-      "Test accuracy: 0.933\n",
-      "Epoch: 002/010 cost: 1.520105678\n",
-      "Training accuracy: 0.960\n",
-      "Test accuracy: 0.945\n",
-      "Epoch: 003/010 cost: 1.506742131\n",
-      "Training accuracy: 0.960\n",
-      "Test accuracy: 0.954\n",
-      "Epoch: 004/010 cost: 1.497843306\n",
-      "Training accuracy: 0.970\n",
-      "Test accuracy: 0.959\n",
-      "Epoch: 005/010 cost: 1.491715848\n",
-      "Training accuracy: 0.990\n",
-      "Test accuracy: 0.963\n",
-      "Epoch: 006/010 cost: 1.486772999\n",
-      "Training accuracy: 0.960\n",
-      "Test accuracy: 0.966\n",
-      "Epoch: 007/010 cost: 1.483362348\n",
-      "Training accuracy: 1.000\n",
-      "Test accuracy: 0.970\n",
-      "Epoch: 008/010 cost: 1.480253498\n",
-      "Training accuracy: 0.990\n",
-      "Test accuracy: 0.971\n",
-      "Epoch: 009/010 cost: 1.477486276\n",
-      "Training accuracy: 1.000\n",
-      "Test accuracy: 0.973\n",
-      "Optimization Finished!\n"
+      "Epoch: 000/010 cost: 0.596429837\n",
+      "TRAIN ACCURACY: 0.940\n",
+      "TEST ACCURACY: 0.920\n",
+      "Epoch: 001/010 cost: 0.222249557\n",
+      "TRAIN ACCURACY: 0.940\n",
+      "TEST ACCURACY: 0.943\n",
+      "Epoch: 002/010 cost: 0.161496330\n",
+      "TRAIN ACCURACY: 0.990\n",
+      "TEST ACCURACY: 0.955\n",
+      "Epoch: 003/010 cost: 0.123577177\n",
+      "TRAIN ACCURACY: 0.970\n",
+      "TEST ACCURACY: 0.961\n",
+      "Epoch: 004/010 cost: 0.096525699\n",
+      "TRAIN ACCURACY: 0.970\n",
+      "TEST ACCURACY: 0.969\n",
+      "Epoch: 005/010 cost: 0.076882775\n",
+      "TRAIN ACCURACY: 0.970\n",
+      "TEST ACCURACY: 0.972\n",
+      "Epoch: 006/010 cost: 0.061825395\n",
+      "TRAIN ACCURACY: 0.990\n",
+      "TEST ACCURACY: 0.974\n",
+      "Epoch: 007/010 cost: 0.049537351\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.976\n",
+      "Epoch: 008/010 cost: 0.039864310\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.977\n",
+      "Epoch: 009/010 cost: 0.032231958\n",
+      "TRAIN ACCURACY: 0.980\n",
+      "TEST ACCURACY: 0.978\n",
+      "OPTIMIZATION FINISHED\n"
      ]
     }
    ],
    "source": [
-    "# Launch the graph\n",
+    "# LAUNCH THE GRAPH\n",
     "sess = tf.Session()\n",
     "sess.run(init)\n",
     "\n",
-    "# Training cycle\n",
+    "# OPTIMIZE\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0.\n",
     "    total_batch = int(mnist.train.num_examples/batch_size)\n",
-    "    # Loop over all batches\n",
+    "    # ITERATION\n",
     "    for i in range(total_batch):\n",
     "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
-    "        # Fit training using batch data\n",
     "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys})\n",
-    "        # Compute average loss\n",
     "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys})/total_batch\n",
-    "    # Display logs per epoch step\n",
+    "    \n",
+    "    # DISPLAY\n",
     "    if epoch % display_step == 0:\n",
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
     "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys})\n",
-    "        print (\"Training accuracy: %.3f\" % (train_acc))\n",
+    "        print (\"TRAIN ACCURACY: %.3f\" % (train_acc))\n",
     "        test_acc = sess.run(accr, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
-    "        print (\"Test accuracy: %.3f\" % (test_acc))\n",
+    "        print (\"TEST ACCURACY: %.3f\" % (test_acc))\n",
     "\n",
-    "print (\"Optimization Finished!\")\n"
+    "print (\"OPTIMIZATION FINISHED\")"
    ]
   },
   {
@@ -211,13 +248,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training accuracy: 0.973\n"
+      "TRAIN ACCURACY: 0.978\n"
      ]
     }
    ],
    "source": [
     "test_acc = sess.run(accr, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
-    "print (\"Training accuracy: %.3f\" % (test_acc))"
+    "print (\"TRAIN ACCURACY: %.3f\" % (test_acc))"
    ]
   }
  ],
