--- a/notebooks/vis_cnn_mnist.ipynb
+++ b/notebooks/vis_cnn_mnist.ipynb
@@ -121,7 +121,7 @@
     "        # Vectorize\n",
     "        _dense1 = tf.reshape(_pool_dr2, [-1, _w['wd1'].get_shape().as_list()[0]])\n",
     "        # Fc1\n",
-    "        _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
+    "        _fc1 = tf.nn.relu(tf.nn.bias_add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
     "        _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
     "    with tf.variable_scope(\"FC_2\"):\n",
     "        # Fc2\n",
@@ -229,21 +229,21 @@
      "output_type": "stream",
      "text": [
       "Start!\n",
-      "Epoch: 000/005 cost: 0.318147133\n",
+      "Epoch: 000/005 cost: 0.352900247\n",
       " Training accuracy: 0.990\n",
-      " Test accuracy: 0.979\n",
-      "Epoch: 001/005 cost: 0.050988509\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.987\n",
-      "Epoch: 002/005 cost: 0.032410927\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.989\n",
-      "Epoch: 003/005 cost: 0.024957376\n",
-      " Training accuracy: 0.970\n",
-      " Test accuracy: 0.990\n",
-      "Epoch: 004/005 cost: 0.019208626\n",
+      " Test accuracy: 0.981\n",
+      "Epoch: 001/005 cost: 0.047190106\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.988\n",
+      "Epoch: 002/005 cost: 0.031958400\n",
       " Training accuracy: 1.000\n",
       " Test accuracy: 0.990\n",
+      "Epoch: 003/005 cost: 0.022927662\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.990\n",
+      "Epoch: 004/005 cost: 0.018374201\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.991\n",
       "Optimization Finished.\n"
      ]
     }
