--- a/notebooks/char_rnn_train_hangul.ipynb
+++ b/notebooks/char_rnn_train_hangul.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Hangul RNN"
+    "# TRAIN HANGUL-RNN"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load dataset using TextLoader"
+    "# LOAD DATASET WITH TEXTLOADER"
    ]
   },
   {
@@ -56,8 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading preprocessed files\n",
-      "type of 'data_loader' is <type 'dict'>, length is 76\n"
+      "loading preprocessed files\n"
      ]
     }
    ],
@@ -67,24 +66,108 @@
     "seq_length  = 50\n",
     "data_loader = TextLoader(data_dir, batch_size, seq_length)\n",
     "# This makes \"vocab.pkl\" and \"data.npy\" in \"data/nine_dreams\"   \n",
-    "#  from \"data/nine_dreams/input.txt\" \n",
-    "vocab_size = data_loader.vocab_size\n",
-    "vocab = data_loader.vocab\n",
-    "chars = data_loader.chars\n",
-    "print ( \"type of 'data_loader' is %s, length is %d\" \n",
-    "       % (type(data_loader.vocab), len(data_loader.vocab)) )"
+    "#  from \"data/nine_dreams/input.txt\" "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# See how batch looks like"
+    "# VOCAB AND CHARS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of 'data_loader.vocab' is <type 'dict'>, length is 76\n",
+      "type of 'data_loader.chars' is <type 'tuple'>, length is 76\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = data_loader.vocab_size\n",
+    "vocab = data_loader.vocab\n",
+    "chars = data_loader.chars\n",
+    "print ( \"type of 'data_loader.vocab' is %s, length is %d\" \n",
+    "       % (type(data_loader.vocab), len(data_loader.vocab)) )\n",
+    "print ( \"type of 'data_loader.chars' is %s, length is %d\" \n",
+    "       % (type(data_loader.chars), len(data_loader.chars)) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VOCAB: DICTIONARY (CHAR->INDEX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'_': 69, u'6': 59, u':': 57, u'\\n': 19, u'4': 67, u'5': 63, u'>': 75, u'!': 52, u' ': 1, u'\"': 28, u'\\u1d25': 0, u\"'\": 49, u')': 46, u'(': 45, u'-': 65, u',': 27, u'.': 24, u'\\u3131': 7, u'0': 73, u'\\u3133': 60, u'\\u3132': 29, u'\\u3135': 50, u'\\u3134': 4, u'\\u3137': 13, u'\\u3136': 44, u'\\u3139': 5, u'\\u3138': 32, u'\\u313b': 55, u'\\u313a': 48, u'\\u313c': 54, u'?': 41, u'3': 66, u'\\u3141': 12, u'\\u3140': 51, u'\\u3143': 47, u'\\u3142': 17, u'\\u3145': 10, u'\\u3144': 43, u'\\u3147': 2, u'\\u3146': 22, u'\\u3149': 40, u'\\u3148': 15, u'\\u314b': 42, u'\\u314a': 23, u'\\u314d': 31, u'\\u314c': 30, u'\\u314f': 3, u'\\u314e': 14, u'\\u3151': 34, u'\\u3150': 21, u'\\u3153': 11, u'\\u3152': 74, u'\\u3155': 18, u'\\u3154': 20, u'\\u3157': 9, u'\\u3156': 39, u'\\u3159': 53, u'\\u3158': 26, u'\\u315b': 38, u'\\u315a': 33, u'\\u315d': 36, u'\\u315c': 16, u'\\u315f': 35, u'\\u315e': 61, u'\\u3161': 8, u'\\u3160': 37, u'\\u3163': 6, u'\\u3162': 25, u'\\x1a': 72, u'9': 64, u'7': 71, u'2': 62, u'1': 58, u'\\u313f': 56, u'\\u313e': 70, u'8': 68}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (data_loader.vocab)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CHARS: LIST (INDEX->CHAR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(u'\\u1d25', u' ', u'\\u3147', u'\\u314f', u'\\u3134', u'\\u3139', u'\\u3163', u'\\u3131', u'\\u3161', u'\\u3157', u'\\u3145', u'\\u3153', u'\\u3141', u'\\u3137', u'\\u314e', u'\\u3148', u'\\u315c', u'\\u3142', u'\\u3155', u'\\n', u'\\u3154', u'\\u3150', u'\\u3146', u'\\u314a', u'.', u'\\u3162', u'\\u3158', u',', u'\"', u'\\u3132', u'\\u314c', u'\\u314d', u'\\u3138', u'\\u315a', u'\\u3151', u'\\u315f', u'\\u315d', u'\\u3160', u'\\u315b', u'\\u3156', u'\\u3149', u'?', u'\\u314b', u'\\u3144', u'\\u3136', u'(', u')', u'\\u3143', u'\\u313a', u\"'\", u'\\u3135', u'\\u3140', u'!', u'\\u3159', u'\\u313c', u'\\u313b', u'\\u313f', u':', u'1', u'6', u'\\u3133', u'\\u315e', u'2', u'5', u'9', u'-', u'3', u'4', u'8', u'_', u'\\u313e', u'7', u'\\x1a', u'0', u'\\u3152', u'>')\n",
+      "ᴥ\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (data_loader.chars)\n",
+    "# USAGE\n",
+    "print (data_loader.chars[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TRAINING BATCH (IMPORTANT!!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -95,23 +178,23 @@
      "text": [
       "Type of 'x' is <type 'numpy.ndarray'>. Shape is (50, 50)\n",
       "x looks like \n",
-      "[[14  3  4 ..., 17 16  0]\n",
-      " [ 0  2 11 ...,  0 14  6]\n",
-      " [ 5  8 12 ...,  2 16  4]\n",
+      "[[ 3  5  0 ...,  3  4  0]\n",
+      " [20  0  1 ..., 13  3  0]\n",
+      " [10 11  2 ...,  1  7  3]\n",
       " ..., \n",
-      " [ 5  9  0 ...,  3  0 13]\n",
-      " [18  7  0 ..., 14  3  4]\n",
-      " [13  8  5 ..., 13  3  0]]\n",
+      " [ 1 17  6 ...,  0  1  7]\n",
+      " [ 0 14  3 ..., 12  3  4]\n",
+      " [ 0  7  3 ...,  1 15  3]]\n",
       "\n",
       "Type of 'y' is <type 'numpy.ndarray'>. Shape is (50, 50)\n",
       "y looks like \n",
-      "[[ 3  4  0 ..., 16  0 23]\n",
-      " [ 2 11  0 ..., 14  6  0]\n",
-      " [ 8 12  0 ..., 16  4  0]\n",
+      "[[ 5  0  1 ...,  4  0 15]\n",
+      " [ 0  1  7 ...,  3  0 24]\n",
+      " [11  2  0 ...,  7  3  0]\n",
       " ..., \n",
-      " [ 9  0  1 ...,  0 13  8]\n",
-      " [ 7  0  2 ...,  3  4  0]\n",
-      " [ 8  5  0 ...,  3  0  7]]\n"
+      " [17  6  0 ...,  1  7  9]\n",
+      " [14  3  0 ...,  3  4  0]\n",
+      " [ 7  3  0 ..., 15  3  2]]\n"
      ]
     }
    ],
@@ -128,69 +211,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# data_loader.vocab"
+    "# DEFINE A MULTILAYER LSTM NETWORK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data_loader.vocab looks like \n",
-      "{u'_': 69, u'6': 59, u':': 57, u'\\n': 19, u'4': 67, u'5': 63, u'>': 75, u'!': 52, u' ': 1, u'\"': 28, u'\\u1d25': 0, u\"'\": 49, u')': 46, u'(': 45, u'-': 65, u',': 27, u'.': 24, u'\\u3131': 7, u'0': 73, u'\\u3133': 60, u'\\u3132': 29, u'\\u3135': 50, u'\\u3134': 4, u'\\u3137': 13, u'\\u3136': 44, u'\\u3139': 5, u'\\u3138': 32, u'\\u313b': 55, u'\\u313a': 48, u'\\u313c': 54, u'?': 41, u'3': 66, u'\\u3141': 12, u'\\u3140': 51, u'\\u3143': 47, u'\\u3142': 17, u'\\u3145': 10, u'\\u3144': 43, u'\\u3147': 2, u'\\u3146': 22, u'\\u3149': 40, u'\\u3148': 15, u'\\u314b': 42, u'\\u314a': 23, u'\\u314d': 31, u'\\u314c': 30, u'\\u314f': 3, u'\\u314e': 14, u'\\u3151': 34, u'\\u3150': 21, u'\\u3153': 11, u'\\u3152': 74, u'\\u3155': 18, u'\\u3154': 20, u'\\u3157': 9, u'\\u3156': 39, u'\\u3159': 53, u'\\u3158': 26, u'\\u315b': 38, u'\\u315a': 33, u'\\u315d': 36, u'\\u315c': 16, u'\\u315f': 35, u'\\u315e': 61, u'\\u3161': 8, u'\\u3160': 37, u'\\u3163': 6, u'\\u3162': 25, u'\\x1a': 72, u'9': 64, u'7': 71, u'2': 62, u'1': 58, u'\\u313f': 56, u'\\u313e': 70, u'8': 68} \n"
-     ]
-    }
-   ],
-   "source": [
-    "print (\"data_loader.vocab looks like \\n%s \" % (data_loader.vocab))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# data_loader.chars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type of 'data_loader.chars' is <type 'tuple'>, length is 76\n",
-      "data_loader.chars looks like \n",
-      "(u'\\u1d25', u' ', u'\\u3147', u'\\u314f', u'\\u3134', u'\\u3139', u'\\u3163', u'\\u3131', u'\\u3161', u'\\u3157', u'\\u3145', u'\\u3153', u'\\u3141', u'\\u3137', u'\\u314e', u'\\u3148', u'\\u315c', u'\\u3142', u'\\u3155', u'\\n', u'\\u3154', u'\\u3150', u'\\u3146', u'\\u314a', u'.', u'\\u3162', u'\\u3158', u',', u'\"', u'\\u3132', u'\\u314c', u'\\u314d', u'\\u3138', u'\\u315a', u'\\u3151', u'\\u315f', u'\\u315d', u'\\u3160', u'\\u315b', u'\\u3156', u'\\u3149', u'?', u'\\u314b', u'\\u3144', u'\\u3136', u'(', u')', u'\\u3143', u'\\u313a', u\"'\", u'\\u3135', u'\\u3140', u'!', u'\\u3159', u'\\u313c', u'\\u313b', u'\\u313f', u':', u'1', u'6', u'\\u3133', u'\\u315e', u'2', u'5', u'9', u'-', u'3', u'4', u'8', u'_', u'\\u313e', u'7', u'\\x1a', u'0', u'\\u3152', u'>') \n"
-     ]
-    }
-   ],
-   "source": [
-    "print ( \"type of 'data_loader.chars' is %s, length is %d\" \n",
-    "       % (type(data_loader.chars), len(data_loader.chars)) )\n",
-    "print (\"data_loader.chars looks like \\n%s \" % (data_loader.chars,))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Define network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -206,11 +232,10 @@
    "source": [
     "rnn_size   = 512\n",
     "num_layers = 3\n",
-    "grad_clip  = 5.\n",
-    "\n",
+    "grad_clip  = 5. # <= GRADIENT CLIPPING (PRACTICALLY IMPORTANT)\n",
     "vocab_size = data_loader.vocab_size\n",
     "\n",
-    "# Select RNN Cell\n",
+    "# SELECT RNN CELL (MULTI LAYER LSTM)\n",
     "unitcell = tf.nn.rnn_cell.BasicLSTMCell(rnn_size)\n",
     "cell = tf.nn.rnn_cell.MultiRNNCell([unitcell] * num_layers)\n",
     "\n",
@@ -225,8 +250,8 @@
     "    softmax_b = tf.get_variable(\"softmax_b\", [vocab_size])\n",
     "    with tf.device(\"/cpu:0\"):\n",
     "        embedding = tf.get_variable(\"embedding\", [vocab_size, rnn_size])\n",
-    "        inputs = tf.split(1, seq_length, tf.nn.embedding_lookup(embedding\n",
-    "                    , input_data))\n",
+    "        inputs = tf.split(1, seq_length, tf.nn.embedding_lookup(\n",
+    "                embedding, input_data))\n",
     "        inputs = [tf.squeeze(input_, [1]) for input_ in inputs]\n",
     "print (\"Network ready\")"
    ]
@@ -240,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -249,45 +274,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network Ready\n"
+      "FUNCTIONS READY\n"
      ]
     }
    ],
    "source": [
-    "# Loop function for seq2seq (not used)\n",
-    "def loop(prev, _):\n",
-    "    prev = tf.nn.xw_plus_b(prev, softmax_w, softmax_b)\n",
-    "    prev_symbol = tf.stop_gradient(tf.argmax(prev, 1))\n",
-    "    return tf.nn.embedding_lookup(embedding, prev_symbol)\n",
     "# Output of RNN\n",
     "outputs, last_state = tf.nn.seq2seq.rnn_decoder(inputs, initial_state\n",
     "                        , cell, loop_function=None, scope='rnnlm')\n",
     "output = tf.reshape(tf.concat(1, outputs), [-1, rnn_size])\n",
     "logits = tf.nn.xw_plus_b(output, softmax_w, softmax_b)\n",
+    "\n",
     "# Next word probability\n",
     "probs = tf.nn.softmax(logits)\n",
-    "# Define LOSS\n",
-    "loss = tf.nn.seq2seq.sequence_loss_by_example([logits], # Input\n",
-    "    [tf.reshape(targets, [-1])], # Target\n",
-    "    [tf.ones([batch_size * seq_length])], # Weight\n",
-    "    vocab_size)\n",
-    "# Define Optimizer\n",
-    "cost = tf.reduce_sum(loss) / batch_size / seq_length\n",
-    "final_state = last_state\n",
-    "lr = tf.Variable(0.0, trainable=False)\n",
-    "tvars = tf.trainable_variables()\n",
-    "grads, _ = tf.clip_by_global_norm(tf.gradients(cost, tvars), grad_clip)\n",
-    "_optm = tf.train.AdamOptimizer(lr)\n",
-    "optm = _optm.apply_gradients(zip(grads, tvars))\n",
-    "\n",
-    "print (\"Network Ready\")"
+    "print (\"FUNCTIONS READY\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run"
+    "# DEFINE LOSS FUNCTION "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOSS FUNCTION\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = tf.nn.seq2seq.sequence_loss_by_example([logits], # Input\n",
+    "    [tf.reshape(targets, [-1])], # Target\n",
+    "    [tf.ones([batch_size * seq_length])], # Weight\n",
+    "    vocab_size)\n",
+    "print (\"LOSS FUNCTION\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEFINE COST FUNCTION "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NETWORK READY\n"
+     ]
+    }
+   ],
+   "source": [
+    "cost = tf.reduce_sum(loss) / batch_size / seq_length\n",
+    "\n",
+    "# GRADIENT CLIPPING ! \n",
+    "lr = tf.Variable(0.0, trainable=False) # <= LEARNING RATE \n",
+    "tvars = tf.trainable_variables()\n",
+    "grads, _ = tf.clip_by_global_norm(tf.gradients(cost, tvars), grad_clip)\n",
+    "_optm = tf.train.AdamOptimizer(lr)\n",
+    "optm = _optm.apply_gradients(zip(grads, tvars))\n",
+    "\n",
+    "final_state = last_state\n",
+    "print (\"NETWORK READY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OPTIMIZE NETWORK WITH LR SCHEDULING"
    ]
   },
   {
@@ -299,7 +372,6 @@
    },
    "outputs": [],
    "source": [
-    "# Train the model!\n",
     "num_epochs    = 500\n",
     "save_every    = 1000\n",
     "learning_rate = 0.0002\n",
@@ -313,7 +385,7 @@
     "saver = tf.train.Saver(tf.all_variables())\n",
     "for e in range(num_epochs): # for all epochs\n",
     "\n",
-    "    # Learning rate scheduling\n",
+    "    # LEARNING RATE SCHEDULING \n",
     "    sess.run(tf.assign(lr, learning_rate * (decay_rate ** e)))\n",
     "\n",
     "    data_loader.reset_batch_pointer()\n",
@@ -325,18 +397,18 @@
     "        # Train!\n",
     "        train_loss, state, _ = sess.run([cost, final_state, optm], feed)\n",
     "        end = time.time()\n",
-    "\n",
+    "        # PRINT \n",
     "        if b % 100 == 0:\n",
     "            print (\"%d/%d (epoch: %d), loss: %.3f, time/batch: %.3f\"  \n",
     "                   % (e * data_loader.num_batches + b\n",
     "                    , num_epochs * data_loader.num_batches\n",
     "                    , e, train_loss, end - start))\n",
-    "\n",
+    "        # SAVE MODEL\n",
     "        if (e * data_loader.num_batches + b) % save_every == 0:\n",
     "            checkpoint_path = os.path.join(save_dir, 'model.ckpt')\n",
     "            saver.save(sess, checkpoint_path\n",
     "                       , global_step = e * data_loader.num_batches + b)\n",
-    "            print(\"model saved to {}\".format(checkpoint_path))\n"
+    "            print(\"model saved to {}\".format(checkpoint_path))"
    ]
   },
   {
@@ -346,7 +418,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# IT TAKE A LOOOOOOOOT OF TIME"
+   ]
   }
  ],
  "metadata": {
